--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
 }
 
 #graph {
-  flex: 3;
+  flex: 4;  /* Increased width */
   position: relative;
   background: white;
 }
@@ -52,7 +52,7 @@ body {
 }
 
 #propertiesPanel.open {
-  max-height: 250px;
+  max-height: 300px;
 }
 
 #plots {
@@ -76,8 +76,16 @@ svg {
   height: 100%;
 }
 
-button {
-  cursor: pointer;
+line {
+  stroke: #444;           /* Darker edges */
+  stroke-width: 1.5px;    /* Thicker edges */
+  stroke-opacity: 0.9;    /* Highly visible */
+}
+
+circle {
+  stroke: #333;
+  stroke-width: 1px;
+  cursor: grab;
 }
 
 .tooltip {
@@ -98,11 +106,7 @@ button {
 <div id="controls">
   <select id="networkSelect"></select>
   <button id="loadBtn">Visualize</button>
-  <label>
-    <input type="checkbox" id="logToggle">
-    Log Degree Scaling
-  </label>
-  <button id="toggleProperties">Toggle Properties</button>
+  <button id="toggleProperties">Show Network Properties</button>
 </div>
 
 <div id="main">
@@ -131,9 +135,8 @@ button {
     <div id="description">
       <h3>Description & Citations</h3>
       <p>
-        Sample description text. Replace this with
-        information about the selected network, its
-        origin, references, and citations.
+        Replace this text with network description,
+        dataset source, methodology, and references.
       </p>
     </div>
 
