--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ body {
   flex: 1;
   padding: 15px;
   background: #fafafa;
+  font-size: 12px;      /* smaller font */
+  line-height: 1.4;     /* improves readability */
 }
 
 svg {
