--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ body {
 
 #description {
   flex: 1;
-  padding: 15px;
+  padding: 12px;
   background: #fafafa;
-  font-size: 12px;      /* smaller font */
-  line-height: 1.4;     /* improves readability */
+  font-size: 12px;
+  line-height: 1.4;
 }
 
 svg {
@@ -100,7 +100,6 @@ circle {
   display: none;
 }
 
-/* Table Styling */
 table {
   width: 100%;
   border-collapse: collapse;
@@ -155,7 +154,7 @@ th {
 
     <div id="description">
       <h3>Description & Citations</h3>
-      Replace this text with dataset description and references.
+      Select a network and click Visualize.
     </div>
 
   </div>
