--- a/index.html
+++ b/index.html
@@ -144,10 +144,10 @@ th {
       <div class="section-header">Degree Distribution</div>
       <div class="section-content">
         <div style="height:250px;">
-          <svg id="histSVG"></svg>
+          <svg id="histSVG" height="250"></svg>
         </div>
         <div style="height:250px;">
-          <svg id="logSVG"></svg>
+          <svg id="logSVG" height="250"></svg>
         </div>
       </div>
     </div>
