--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ th {
 
     <!-- Degree Distribution -->
     <div class="section" id="degreeSection">
-      <div class="section-header">Degree Distribution</div>
+      <div class="section-header">Degree Distributions</div>
       <div class="section-content">
         <svg id="histSVG"></svg>
         <svg id="logSVG"></svg>
