--- a/index.html
+++ b/index.html
@@ -207,16 +207,20 @@ th {
      <div id="resizeHandle"></div>
 
     <!-- Network Properties -->
-    <div class="section" id="propertiesSection">
-      <div class="section-header">Network Properties</div>
+    <div class="section open" id="propertiesSection">
+      <div class="section-header">
+        <span class="arrow">▼</span> Network Properties
+      </div>
       <div class="section-content">
         <div id="propertiesContent"></div>
       </div>
     </div>
 
     <!-- Degree Distribution -->
-    <div class="section" id="degreeSection">
-      <div class="section-header">Degree Distributions</div>
+    <div class="section open" id="degreeSection">
+      <div class="section-header">
+        <span class="arrow">▼</span> Degree Distributions
+      </div>
       <div class="section-content">
         <svg id="histSVG"></svg>
         <svg id="logSVG"></svg>
@@ -224,8 +228,10 @@ th {
     </div>
 
     <!-- Description -->
-    <div class="section" id="descriptionSection">
-      <div class="section-header">Description & Citations</div>
+    <div class="section open" id="descriptionSection">
+      <div class="section-header">
+        <span class="arrow">▼</span> Description & Citations
+      </div>
       <div class="section-content">
         <div id="description">
           Select a network and click Visualize.
