--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ body {
    LEFT SIDEBAR
 ======================= */
 #sidebar {
-  width: 360px;
+  width: 40vw;              /* 40% of screen */
   min-width: 250px;
-  max-width: 800px;
+  max-width: 80vw;          /* prevent extreme stretching */
   position: relative;
   background: #ffffff;
   overflow-y: auto;
