--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@ th {
   <strong>Network</strong>
   <select id="networkSelect"></select>
   <button id="loadBtn">Visualize</button>
+  <button id="exportBtn" disabled>Export as PNG</button>
 </div>
 
 <!-- =======================
